src/app/customer/customer-navbar/customer-navbar.component.scss
.ba-home-navbar-background {
  background: linear-gradient(270deg, #42688b 0%, #b259ea 100%)
}

.ba-navbar-brand {
  padding: 5px;
  color: white;
  text-align: center;
  font-size: 18px;
  font-weight: bold;
  font-family: Century Gothic, Consolas, serif;
  align-items: center;
  vertical-align: middle;
}

.ba-dropdown-item {
  display: inline-block;
  position: relative;
}

.ba-nav-class {
  width: 100%;
  margin: auto;
  display: inline-block;
}

.ba-dropdown-menu {
  position: absolute;
}

